[package]
name = "opus-builder"
version = "0.1.0"
edition = "2024"

[dependencies]

anyhow = "1.0.86"
thiserror = "1.0.61"
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1.37.0", features = ["full"] }
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
fs_extra = "1.3"
